--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                helloworld
-version:             0.3.0.0
-github:              "githubuser/helloworld"
+version:             0.7.5.0
+github:              "heightweight/pong"
 license:             BSD3
-author:              "Author name here"
+author:              "Boiko Volodymyr"
 maintainer:          "example@example.com"
-copyright:           "2021 Author name here"
+copyright:           "2021 Heightweight"
 
 extra-source-files:
 - README.md
