--- a/helloworld.cabal
+++ b/helloworld.cabal
@@ -5,7 +5,7 @@ cabal-version: 1.12
 -- see: https://github.com/sol/hpack
 
 name:           helloworld
-version:        0.8.2.0
+version:        0.9.5.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/helloworld#readme>
 homepage:       https://github.com/heightweight/pong#readme
 bug-reports:    https://github.com/heightweight/pong/issues
@@ -32,7 +32,10 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , directory
     , gloss
+    , mtl
+    , transformers
   default-language: Haskell2010
 
 executable helloworld-exe
@@ -44,8 +47,11 @@ executable helloworld-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , directory
     , gloss
     , helloworld
+    , mtl
+    , transformers
   default-language: Haskell2010
 
 test-suite helloworld-test
@@ -58,6 +64,9 @@ test-suite helloworld-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , directory
     , gloss
     , helloworld
+    , mtl
+    , transformers
   default-language: Haskell2010
