Introduce `Alphabet.hs`
patchnotes:
-introduced `Alphabet.hs`
-idle screen now says "PONG!" instead of "START"
-idle screen animation now gradually fades out and fades in
-`Engine.hs` no longer holds internal logic data types
-player paddle no longer moves in idle screen

--- a/helloworld.cabal
+++ b/helloworld.cabal
@@ -42,6 +42,7 @@ library
 executable helloworld-exe
   main-is: Main.hs
   other-modules:
+      App.Draw.Alphabet
       App.Draw.Render
       App.Engine
       App.Logic
