--- a/helloworld.cabal
+++ b/helloworld.cabal
@@ -60,13 +60,13 @@ executable helloworld-exe
     , transformers
   default-language: Haskell2010
 
-test-suite helloworld-test
+test-suite engine-test
   type: exitcode-stdio-1.0
-  main-is: Spec.hs
+  main-is: EngineTest.hs
   other-modules:
       Paths_helloworld
   hs-source-dirs:
-      test
+      test, app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
@@ -75,5 +75,29 @@ test-suite helloworld-test
     , helloworld
     , mtl
     , split ==0.2.3.4
+    , tasty
+    , tasty-hunit
+    , transformers
+  default-language: Haskell2010
+
+test-suite logic-test
+  type: exitcode-stdio-1.0
+  main-is: LogicTest.hs
+  other-modules:
+      Paths_helloworld
+  hs-source-dirs:
+      test, app
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      QuickCheck
+    , base >=4.7 && <5
+    , directory
+    , gloss
+    , helloworld
+    , mtl
+    , split ==0.2.3.4
+    , tasty
+    , tasty-hunit
+    , tasty-quickcheck
     , transformers
   default-language: Haskell2010
